--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "swagger": "node ./swagger.js"
+    "swagger-autogen": "node ./swagger.js"
   },
   "author": "",
   "license": "ISC",
