--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.16.3",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.4",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "validatorjs": "^3.22.1"
   },
   "engines": {
     "npm": "10.1.0",
