--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
+    "express-openid-connect": "^2.17.0",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.4",
     "swagger-ui-express": "^4.3.0",
